Update based on the discussion about the Portal interface to this API. Removed most of the uuid parameters, removed the use of SshKeyShort (only internal now).
